--- a/unit1_projects/dbc2.html
+++ b/unit1_projects/dbc2.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 	<div id="header" style="border: 2px ridge; border-radius: 4px; background-color: #b3b8f2; margin: 5px 10px; padding: 2px; height: 30px">
-		<h5><a href="dukegreene.wordpress.com">Blog</a>     </h5>
-		<h5><a href="www.twitter.com/dukegreene">Twitter</a>     </h5>
-		<h5><a href="www.facebook.com/dukegreene">Facebook</a>     </h5>
-		<h5><a href="www.soundcloud.com/thiiirdperson">Soundcloud</a>     </h5>
-		<h5><a href="www.github.com/">GitHub</a></h5>
+		<h5><a href="https://dukegreene.wordpress.com">Blog</a>     </h5>
+		<h5><a href="https://www.twitter.com/dukegreene">Twitter</a>     </h5>
+		<h5><a href="https://www.facebook.com/dukegreene">Facebook</a>     </h5>
+		<h5><a href="https://www.soundcloud.com/thiiirdperson">Soundcloud</a>     </h5>
+		<h5><a href="https://www.github.com/dukegreene">GitHub</a></h5>
 	</div>
 	<div id="sidebar" style="width: 170px; height: 700px; margin-left: 10px; padding: 5px; border: 2px ridge; border-radius: 5px; background-color: #bab0ab;">
 		<img src="http://i.imgur.com/zE8H4IS.jpg" style="width: 160px; border-radius: 5px; margin: 5px" />
