Center content div image and adjust caption

--- a/unit1_projects/dbc2.html
+++ b/unit1_projects/dbc2.html
@@ -25,7 +25,7 @@
 		<p><strong>UPDATE:</strong> Tomorrow is here. I didn't finish what I started last night. I was too tired to concentrate properly and I ended up touching too much in the html style settings, causing my page to look horrendous. I'm going to save any position changes for the CSS. It's hard for me to do things in the exact order I'm instructed to. It's even harder for me to walk away from an unsolved problem and take a break to eat or sleep. But DBC is right about how breaks pay dividends. I woke up this morning with a clear head and a slightly better understanding about how my site elements are supposed to work. I also realized that I could have saved a ton of time by creating a basic template before starting in with sepcifics. Next time I write a page, I'll do that.</p>
 		<p>I am acutely aware that it's Friday and that my family needs time on the weekends. And my lawn is disgustingly long. If I want to have any hope of a sane weekend, I've got to get through this challenge and the next one by the end of the day. Time to be a force of nature...</p>
 			<div>
-				<img src="http://i.imgur.com/JtcKAXg.png" style="height: 325px; border-radius: 7px" />
+				<img src="http://i.imgur.com/JtcKAXg.png" style="height: 325px; margin-left: 16%; border-radius: 7px" />
 				<p id="caption">This is my favorite quote of all time.</p>
 		</div>
 	</div>
