--- a/unit1_projects/week1_cultural_blog.html
+++ b/unit1_projects/week1_cultural_blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Technical Blog: Duke's Site Impressions</title>
+	<title>Week 1 Technical Blog: Duke's Site Impressions</title>
 </head>
 <body>
 	<div id="header">
