populated blog with template code

--- a/unit1_projects/week4_cultural_blog.html
+++ b/unit1_projects/week4_cultural_blog.html
@@ -26,8 +26,8 @@
 		<p>[none]</p>
   </div>
 	<div class="right">
-		<h1 style="margin: auto"><!--***POST TITLE HERE***--></h1>
-		<p><!--***START BLOG CONTENT HERE***--></p>
+		<h1 style="margin: auto">Refactoring Race: Diversity in Tech</h1>
+		<p>This century is all about STEM. Advancements in science, medicine and technology have paved the way for a vibrant tech economy where a person can earn a livelihood with a laptop and a head full of code. Tech jobs pay well and will likely be in high demand for the foreseeable future. With these perks, it's no wonder that people are clamoring for careers in tech. The </p>
 	</div>
 	<div id="footer">
 		<span>This was created and written by Duke Greene in 2014. Thanks for checking it out.</span>
