--- a/unit1_projects/week6_cultural_blog.html
+++ b/unit1_projects/week6_cultural_blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title><!--***BLOG TITLE GOES HERE***--></title>
+	<title>Week 6 Cultural Blog</title>
 </head>
 <body>
 	<div id="header">
@@ -26,8 +26,15 @@
 		<p>[none]</p>
   </div>
 	<div class="right">
-		<h1 style="margin: auto"><!--***POST TITLE HERE***--></h1>
-		<p><!--***START BLOG CONTENT HERE***--></p>
+		<h1 style="margin: auto">No, I Don't Play Football.</h1>
+		<p>It was like being typecast in real life. My teacher sat down across from my parents and told them I was not doing well in math because I "just didn't get" long division. On the surface, that's kind of how it looked. I'd stare off into space instead of doing the problems when study time rolled around, I rarely turned in my work, and when I did, the paper showed only the answer with no calculations. I might be cheating or using a calculator on those, the teacher said. But there was no way someone with my aptitude could be solving those problems in my head. Someone like me wasn't smart enough.</p>
+		<p>Except I was. I had been doing the problems in my head because writing out all my work felt tedious. And eventually I stopped doing the work because it stopped challenging me. I was a smart, headstrong kid. Other smart, headstrong kids my age were in special gifted/talented courses where instructors harnessed all their mental energy in a positive way. I didn't get that kind of structure; when I acted out due to extreme boredom, I was sent to the library for hours at a time, devouring books of my own choosing instead of sitting through lessons. Why wasn't I considered smart enough for the gifted courses? Why was my disinterest in lessons seen as a sign of low potential? Could it be because I was one of only three black kids in my elementary school? </p>
+		<p>I started high school in a different district, but the attitudes I faced were similar. I lost count of the times I turned down a football coach's advances. I had been a choir kid my whole life, and I wasn't about to add athletics to my full load of extracurriculars. In fact, I was and am one of the least physically inclined people I know. But that didn't stop me from being scouted like an untapped vein of raw talent. In what I can only hope is totally unrelated news, black students were disproportionately well-represented on the football team, even though they made up a small minority of the student body.</p>
+		<p>I faced the threat of two stereotypes growing up. First I could have been the dumb black kid, and later I could have been the strong black kid. The danger of stereotype threat is not that other people could have gotten the wrong idea about me. It's that I could have gotten the wrong idea about myself.</p>
+		<p>In another world, I could have let it sink in that I was probably bad at math, that I wouldn't belong in a group of smart kids, that I should probably stick to other subjects, that my future would be brighter if I embraced my number-clumsy nature. I could have let myself believe that football was my calling, that I wouldn't belong with the music nerds and drama heads, that I should probably stick to the weight room and stop pretending I could make any other meaningful contributions to my school's culture.</p>
+		<p>But I don't need to go to another world to see stereotype threat at work. I'm trying to break into a field with a known diversity problem, one that's been attributed to self-selection. The argument goes that tech is overwhelmingly male and White or Asian because that's the makeup of the applicant supply. Why aren't there more female, Black or Latino people seeking careers in tech? Maybe it's due to thousands of small social cues that those groups "just don't get" tech and might be more comfortable somewhere else. Again, the problem is not that these prejudices exist. The threat is that the target will believe the stereotype to be true about themselves.</p>
+		<p>So how do we fight back against stereotype threat? Two ideas spring to mind, and we've been talking about them at DBC for weeks now. With a habit of mindfulness, people can better monitor their thought processes and more quickly identify distorted self-concepts arising from societal stereotypes. And a well-cultivated growth mindset can build self confidence and counteract thoughts of permanently not belonging or being inferior. If growth is always possible, stereotypes will never tell my whole story, even if some of them start out being true. (And who's to say I would have had to choose between football and music? Am I not strong enough to tackle both, pun intended?) Like many issues around diversity, the root problems here are systemic, but many of the most easily implemented solutions are indivisual in nature.</p>
+		<p>The kid who didn't get long division ended up getting top-percentile math scores in high school. How many great programmers are out there, unaware of their potential because they're believing lies someone else told them about themselves?</p>
 	</div>
 	<div id="footer">
 		<span>This was created and written by Duke Greene in 2014. Thanks for checking it out.</span>
