fixed blog titles and index links

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-	<!-- <link rel="stylesheet" type="text/css" href="stylesheets/reset.css" /> -->
+	<link rel="stylesheet" type="text/css" href="stylesheets/reset.css" />
 	<link href='http://fonts.googleapis.com/css?family=Krona+One' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="stylesheets/week2.css" />
+	<link rel="stylesheet" type="text/css" href="stylesheets/index.css" />
 	<title>Duke Greene is Doing Dev Bootcamp</title>
 </head>
 <body>
@@ -19,13 +19,27 @@
 		<a href="https://dukegreene.wordpress.com">Press Me</a>
 		<a href="https://www.linkedin.com/pub/duke-greene/94/774/4ab">Link With Me</a>
 		<a href="http://punksuhate.bandcamp.com/track/full-circle">Rock With Me</a>
-		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Roll With Me</a>
 		<br/>
+	</section>
+	<section id="blogs"
 		<h3>BLOG LINKS</h3>
 		<br/>
 		<a href="http://dukegreene.github.io/unit1_projects/week1_technical_blog.html">Week 1 Technical</a>
 		<a href="http://dukegreene.github.io/unit1_projects/week2_technical.html">Week 2 Technical</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week3_cultural_blog.html">Week 1 Cultural</a>
+		<a href="http://dukegreene.github.io/unit1_projects/week3_technical.html">Week 3 Technical</a>
+		<a href="http://dukegreene.github.io/unit1_projects/week4_technical_blog.html">Week 4 Technical</a>
+		<a href="http://dukegreene.github.io/unit1_projects/week5_technical_blog.html">Week 5 Technical</a>
+		<a href="http://dukegreene.github.io/unit1_projects/week6_technical_blog.html">Week 6 Technical</a>
+		<a href="http://dukegreene.github.io/unit3-projects/week7-technical-blog.html">Week 7 Technical</a>
+		<a href="http://dukegreene.github.io/unit3-projects/week8-technical-blog.html">Week 8 Technical</a>
+		<a href="http://dukegreene.github.io/unit1_projects/week1_cultural_blog.html">Week 1 Cultural</a>
+		<a href="http://dukegreene.github.io/unit1_projects/week3_cultural.html">Week 3 Cultural</a>
+		<a href="http://dukegreene.github.io/unit1_projects/week4_cultural_blog.html">Week 4 Cultural</a>
+		<a href="http://dukegreene.github.io/unit1_projects/week5_cultural_blog.html">Week 5 Cultural</a>
+		<a href="http://dukegreene.github.io/unit1_projects/week6_cultural_blog.html">Week 6 Cultural</a>
+		<a href="http://dukegreene.github.io/unit1_projects/week7-cultural-blog.html">Week 7 Cultural</a>
+		<a href="http://dukegreene.github.io/unit1_projects/week8-cultural-blog.html">Week 8 Cultural</a>
+		<a href="http://dukegreene.github.io/unit1_projects/week9-cultural-blog.html">Week 9 Cultural</a>
 	</section>
 </body>
 </html>
