--- a/unit1_projects/week1_cultural_blog.html
+++ b/unit1_projects/week1_cultural_blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Week 1 Technical Blog: Duke's Site Impressions</title>
+	<title>Culture Blog: Fail Safe - Reflections on DBC Culture</title>
 </head>
 <body>
 	<div id="header">
@@ -25,7 +25,7 @@
 		<p>[none]</p>
   </div>
 	<div class="right">
-		<h1 style="margin: auto">Fail Safe: Reflections on DBC Culture</h1>
+		<h1 style="margin: auto">Fail Safe - Reflections on DBC Culture</h1>
 		<p>I shouldn't eat at Checkers.</p>
 		<p>I can eat better, and cheaper, if I cook at home. And home is a whole lot closer than Checkers. But I still eat there. Because I know what I'm getting, and it's not messy.</p>
 		<p>I have a low mess tolerance. I get uncomfortable with uncertainty. I loathe extra steps. And that's all undercut by a mile-wife perfectionist streak. Checkers is predictable. Prep time is zero, cleanup is minimal. The burgers are never burnt. The fries always cause heartburn. I get what I pay for. It's not close to what my body actually needs, but the convenience makes it feel close enough. And that is what I think Shereef is cautioning against when he talks about the restaurant mindset. It's not about what you can be guaranteed to receive. It's about what the possibilities are when you're willing to work in a messy kitchen with a chance of failing to make a good dish.</p>
