--- a/unit1_projects/week3_cultural.html
+++ b/unit1_projects/week3_cultural.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Week 3 Cultural Blog</title>
+	<title>Culture Blog: Thoughts on Thinking, Meditations on Mindset</title>
 </head>
 <body>
 	<!-- Header -->
