--- a/unit1_projects/week3_technical.html
+++ b/unit1_projects/week3_technical.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Week 3 Technical Blog</title>
+	<title>Tech Blog: A Walk on the Client Side - Some Thoughts on JavaScript</title>
 </head>
 <body>
 	<div id="header">
@@ -26,7 +26,7 @@
 		<p>[none]</p>
   </div>
 	<div class="right">
-		<h1 style="margin: auto">A Walk on the Client Side: Some Thoughts on JavaScript</h1>
+		<h1 style="margin: auto">A Walk on the Client Side - Some Thoughts on JavaScript</h1>
 		<p>JavaScript is almowt everywhere online, and it has been for a while. Created by and for Netscape in 1995, its popularity has exploded in the years since. Now it is the de facto browser programming language, used almost anywhere a computer connects to the web. But why is it so popular? And should it be popular? Let's take a look at the reasons behind JavaScript's popularity as well as some pros and cons for those thinking of using it.</p>
 		<h3>"There Goes Java...It's So Hot Right Now"</h3>
 		<p>So why is JavaScript so popular as to be almost ubiquitous? One reason is that it's supported in almost every browser in use. People like programming things that will see the light of day, and programming in such a widely "runnable" language is like throwing the curtains open and basking in the sun. It's also very easy to add JavaScript to a site. You don't need a compiler or add-on to use it, just adding the code to a web page and the browser takes care of the rest. Finally, and possibly most importantly, JavaScript runs on the client side, which means that the browser handles all the code itself. Since the process doesn't require a server, JavaScript runs fast and doesn't clog up server loads. Overall, it's a language that was created with simplicity and ease of use in mind, and its popularity seems to imply that it's fulfilling its mission.</p>
