--- a/unit1_projects/week4_cultural_blog.html
+++ b/unit1_projects/week4_cultural_blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Week 4 Cultural Blog</title>
+	<title>Culture Blog: Refactoring Racism - Meritocracy and Diversity in Tech</title>
 </head>
 <body>
 	<div id="header">
@@ -26,7 +26,7 @@
 		<p>[none]</p>
   </div>
 	<div class="right">
-		<h1 style="margin: auto">Refactoring Racism: Meritocracy and Diversity in Tech</h1>
+		<h1 style="margin: auto">Refactoring Racism - Meritocracy and Diversity in Tech</h1>
 		<p>This century is all about STEM. Advancements in science, medicine and technology have paved the way for a vibrant tech economy where a person can earn a livelihood with a laptop and a head full of code. Tech jobs pay well and will likely be in high demand for the foreseeable future. With these perks, it's no wonder that people are clamoring for careers in tech. But who's doing the clamoring? In an ideal world, we would see a cross-section of humanity – largely nonwhite, half female, young and old – in the list of tech applicants. In the real world, the applicant pool is overwhelmingly young, male, and white or Asian. Experts point to this homogenous talent pool as the reason for the tech world's current diversity problem. Black and Latino communities, as well as women of every color, are severely underrepresented in tech. Google recently made headlines by taking its diversity numbers public in an effort to spark a wider conversation about how to change the face of tech in America to better reflect the faces of Americans.</p>
 		<p>Tech needs diversity if it wants to keep calling itself a meritocracy. For decades, Silicon Valley has prided itself on a culture where the best ideas flourish and the hardest workers thrive. But if 25% of the country's demographic makeup (and one of its genders) are being systematically excluded in the talent pool, that means the best and brightest from those groups aren't up for consideration at the same rate. At best, that means the tech world is disconnected from the reality of a diverse and discerning customer base. At worst, it means that somewhere down the line, a black kid with the potential to change the tech world was shoved off that path by societal forces beyond his reckoning.</p>
 		<p>I don't think the tech world is racist, but I think it is pragmatic, and in a comfortable enough position to be aloof about the implications of that pragmatism. Some status quo apologists hide behind "meritocracy" as a reason not to be more proactive. If someone isn't good enough for the job, they say, that person shouldn't get the job. Doesn't looking at physical traits just dilute the importance of finding a truly qualified candidate?</p>
