--- a/unit1_projects/week5_cultural_blog.html
+++ b/unit1_projects/week5_cultural_blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Week 5 Cultural Blog</title>
+	<title>Culture Blog: A.S.K. Not What Your Pair Can Do For You...</title>
 </head>
 <body>
 	<div id="header">
