--- a/unit1_projects/week5_technical_blog.html
+++ b/unit1_projects/week5_technical_blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Week 5 Technical Blog</title>
+	<title>Tech Blog: Staying Classy - Initializing with Instance Variables</title>
 </head>
 <body>
 	<div id="header">
@@ -26,7 +26,7 @@
 		<p>[none]</p>
   </div>
 	<div class="right">
-		<h1 style="margin: auto">Staying Classy: Initializing with Instance Variables</h1>
+		<h1 style="margin: auto">Staying Classy - Initializing with Instance Variables</h1>
 		<p>Ruby classes allow programmers to create all sorts of different kinds of objects. By creating class-specific methods and passing shared variables between them, it's possible to pass a couple arguments to a new instance of a class and do almost anything with them. But to keep track of how those arguments are stored, it's necessary to use something called instance variables.</p>
 		<p>Until I started working with classes, I had only been exposed to local variables. Local variables have the smallest scope of any variable type in Ruby. Scope describes what parts of a program can access a variable. With a local variable, the scope is very small; the variable only works within the construct where it's defined. Here's an example of how we can define a local variable in a loop, but the variable doesn't exist outside the loop.</p>
 		<img src="http://i.imgur.com/lp2OnOy.png" />
