--- a/unit3-projects/week7-technical-blog.html
+++ b/unit3-projects/week7-technical-blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Week 7 Technical Blog</title>
+	<title>Tech Blog: The Artist Has Prepared a Statement...</title>
 </head>
 <body>
 	<div id="header">
