--- a/unit3-projects/week8-technical-blog.html
+++ b/unit3-projects/week8-technical-blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Week 8 Technical Blog</title>
+	<title>Tech Blog: Testing, Take the Wheel</title>
 </head>
 <body>
 	<div id="header">
@@ -26,7 +26,7 @@
 		<p>[none]</p>
   </div>
 	<div class="right">
-		<h1 style="margin: auto">Letting Testing Take the Wheel</h1>
+		<h1 style="margin: auto">Testing, Take the Wheel</h1>
 		<img src="http://i.imgur.com/RCEF64q.jpg">
 		<p>I learned a good rule of thumb after a pairing session last week. My guide told me it's good practice to test frequently while coding. How frequently? I get to write one line of code between tests for every year I've been programming. For me, that means I should be testing every single time I write something new. But why is this good practice? I decided to do some research into Test-Driven Development (TDD) and see if I could answer my own question. In the process, I learned about what TDD is and why more and more programmers are using it to improve their workflow and understand their code better.</p>
 		<img src="images/tdd-circle-of-life.png" style="background: white">
