--- a/unit3-projects/week9-cultural-blog.html
+++ b/unit3-projects/week9-cultural-blog.html
@@ -26,7 +26,7 @@
 		<p>[none]</p>
   </div>
 	<div class="right">
-		<h1 style="margin: auto"><!--***POST TITLE HERE***--></h1>
+		<h1 style="margin: auto">COMING SOON! Stay tuned...</h1>
 		<p><!--***START BLOG CONTENT HERE***--></p>
 	</div>
 	<div id="footer">
