--- a/unit1_projects/week2_technical.html
+++ b/unit1_projects/week2_technical.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Week 2: CSS Positioning Explained</title>
+	<title>Tech Blog: I Want the Div to Go to There!</title>
 </head>
 <body>
 	<div id="header">
