--- a/unit1_projects/week6_cultural_blog.html
+++ b/unit1_projects/week6_cultural_blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Week 6 Cultural Blog</title>
+	<title>Culture Blog: No, I Don't Play Football.</title>
 </head>
 <body>
 	<div id="header">
