--- a/unit1_projects/week6_technical_blog.html
+++ b/unit1_projects/week6_technical_blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Week 6 Technical Blog</title>
+	<title>Tech Blog: Inheritance and Composition</title>
 </head>
 <body>
 	<div id="header">
