--- a/unit3-projects/week8-cultural-blog.html
+++ b/unit3-projects/week8-cultural-blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Week 8 Cultural Blog</title>
+	<title>Culture Blog: Southbound and Down - Conflict and Avoidance</title>
 </head>
 <body>
 	<div id="header">
