link separators and styles

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<section id="links">
 		<h3>SOCIAL LINKS</h3>
 		<br/>
-		<a href="https://www.facebook.com/dukegreene">Facebook Me</a>
-		<a href="https://www.twitter.com/dukegreene">Tweet Me</a>
-		<a href="https://www.github.com/dukegreene">Git Me</a>
-		<a href="https://dukegreene.wordpress.com">Press Me</a>
-		<a href="https://www.linkedin.com/pub/duke-greene/94/774/4ab">Link With Me</a>
+		<a href="https://www.facebook.com/dukegreene">Facebook Me</a> | 
+		<a href="https://www.twitter.com/dukegreene">Tweet Me</a> | 
+		<a href="https://www.github.com/dukegreene">Git Me</a> | 
+		<a href="https://dukegreene.wordpress.com">Press Me</a> | 
+		<a href="https://www.linkedin.com/pub/duke-greene/94/774/4ab">Link With Me</a> | 
 		<a href="http://punksuhate.bandcamp.com/track/full-circle">Rock With Me</a>
 		<br/>
 	</section>
