--- a/index.html
+++ b/index.html
@@ -2,44 +2,43 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/reset.css" />
 	<link href='http://fonts.googleapis.com/css?family=Krona+One' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:500' rel='stylesheet' type='text/css'>	
 	<link rel="stylesheet" type="text/css" href="stylesheets/index.css" />
 	<title>Duke Greene is Doing Dev Bootcamp</title>
 </head>
 <body>
-	<header>
-		<h1>DUKE GREENE IS DOING DEV BOOTCAMP</h1>
-	</header>
-	<section id="links">
-		<h3>SOCIAL LINKS</h3>
-		<br/>
-		<a href="https://www.facebook.com/dukegreene">Facebook Me</a> | 
-		<a href="https://www.twitter.com/dukegreene">Tweet Me</a> | 
-		<a href="https://www.github.com/dukegreene">Git Me</a> | 
-		<a href="https://dukegreene.wordpress.com">Press Me</a> | 
-		<a href="https://www.linkedin.com/pub/duke-greene/94/774/4ab">Link With Me</a> | 
-		<a href="http://punksuhate.bandcamp.com/track/full-circle">Rock With Me</a>
-		<br/>
-	</section>
-	<section id="blogs"
-		<h3>BLOG LINKS</h3>
-		<br/>
-		<a href="http://dukegreene.github.io/unit1_projects/week1_technical_blog.html">Week 1 Technical</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week2_technical.html">Week 2 Technical</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week3_technical.html">Week 3 Technical</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week4_technical_blog.html">Week 4 Technical</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week5_technical_blog.html">Week 5 Technical</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week6_technical_blog.html">Week 6 Technical</a>
-		<a href="http://dukegreene.github.io/unit3-projects/week7-technical-blog.html">Week 7 Technical</a>
-		<a href="http://dukegreene.github.io/unit3-projects/week8-technical-blog.html">Week 8 Technical</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week1_cultural_blog.html">Week 1 Cultural</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week3_cultural.html">Week 3 Cultural</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week4_cultural_blog.html">Week 4 Cultural</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week5_cultural_blog.html">Week 5 Cultural</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week6_cultural_blog.html">Week 6 Cultural</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week7-cultural-blog.html">Week 7 Cultural</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week8-cultural-blog.html">Week 8 Cultural</a>
-		<a href="http://dukegreene.github.io/unit1_projects/week9-cultural-blog.html">Week 9 Cultural</a>
-	</section>
+	<div id="wrapper" class="clearfix">
+		<header>
+			<h1>DUKE GREENE IS BLOGGING DEV BOOTCAMP</h1>
+		</header>
+	</div>
+	<div id="wrapper" class="clearfix">
+		<section id="links">
+			<a href="https://www.facebook.com/dukegreene"><img src="images/facebook.gif" /></a>
+			<a href="https://www.twitter.com/dukegreene"><img src="images/twitter-circle-black-512.png" style="width: 76%"/></a>
+			<a href="https://www.github.com/dukegreene"><img src="images/github.gif" /></a>
+			<a href="https://dukegreene.wordpress.com"><img src="images/wp-icon.png" /></a>
+			<a href="https://www.linkedin.com/pub/duke-greene/94/774/4ab"><img src="images/linkedin-Icon-BW.png" /></a>
+			<a href="http://punksuhate.bandcamp.com/track/full-circle"><img src="images/playicon.gif" /></a>
+		</section>
+		<section id="blogs">
+			<a href="http://dukegreene.github.io/unit1_projects/week1_technical_blog.html"><figure><img src="images/bluet2.jpg"><figcaption>In Which Homework Incites In-Site Insight</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit1_projects/week2_technical.html"><figure><img src="images/bluet4.jpg"><figcaption>I Want the Div to Go to There!</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit1_projects/week3_technical.html"><figure><img src="images/bluet1.jpg"><figcaption>A Walk on the Client Side</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit1_projects/week4_technical_blog.html"><figure><img src="images/bluet3.jpg"><figcaption>Looping in Ruby</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit1_projects/week5_technical_blog.html"><figure><img src="images/bluet5.jpg"><figcaption>Staying Classy - Initializing with Instance Variables</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit1_projects/week6_technical_blog.html"><figure><img src="images/bluet17.jpg"><figcaption>Inheritance and Composition</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit3-projects/week7-technical-blog.html"><figure><img src="images/bluet6.jpg"><figcaption>The Artist Has Prepared a Statement...</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit3-projects/week8-technical-blog.html"><figure><img src="images/bluet9.jpg"><figcaption>Testing, Take the Wheel</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit1_projects/week1_cultural_blog.html"><figure><img src="images/bluet11.jpg"><figcaption>Fail Safe - Reflections on DBC Culture</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit1_projects/week3_cultural.html"><figure><img src="images/bluet10.jpg"><figcaption>Thoughts on Thinking, Meditations on Mindset</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit1_projects/week4_cultural_blog.html"><figure><img src="images/bluet8.jpg"><figcaption>Refactoring Racism - Meritocracy and Diversity in Tech</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit1_projects/week5_cultural_blog.html"><figure><img src="images/bluet14.jpg"><figcaption>A.S.K. Not What Your Pair Can Do For You...</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit1_projects/week6_cultural_blog.html"><figure><img src="images/bluet12.jpg"><figcaption>No, I Don't Play Football.</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit3-projects/week7-cultural-blog.html"><figure><img src="images/bluet18.jpg"><figcaption>Remembering What Counts</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit3-projects/week8-cultural-blog.html"><figure><img src="images/bluet15.jpg"><figcaption>Southbound and Down - Conflict and Avoidance</figcaption></figure></a>
+			<a href="http://dukegreene.github.io/unit3-projects/week9-cultural-blog.html"><figure><img src="images/bluet13.jpg"><figcaption>Week 9 Cultural Blog</figcaption></figure></a>
+		</section>
+	</div>
 </body>
 </html>
